fix: quiet width, alignment of menu icon when it's alone, margin bits

--- a/components/picker/index.css
+++ b/components/picker/index.css
@@ -38,7 +38,7 @@ governing permissions and limitations under the License.
   @inherit: %spectrum-BaseButton;
 
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 
   /* Truncate if menu options make us too wide */
@@ -97,6 +97,7 @@ governing permissions and limitations under the License.
 
 .spectrum-Picker--quiet {
   inline-size: auto;
+  min-inline-size: 0;
 
   &:disabled,
   &.is-disabled {
@@ -141,18 +142,11 @@ governing permissions and limitations under the License.
   flex-shrink: 0;
 }
 
-/* Only apply margin to the icon if there's a label */
-.spectrum-Picker-label + .spectrum-Picker-validationIcon {
+.spectrum-Picker-validationIcon {
   margin-inline-start: var(--spectrum-picker-error-icon-margin-left);
 }
 
-/* Apply the bigly margin by default */
 .spectrum-Picker-label ~ .spectrum-Picker-menuIcon {
-  margin-inline-start: var(--spectrum-picker-error-icon-margin-left);
-}
-
-/* If there's a validation icon, we need less margin */
-.spectrum-Picker-validationIcon + .spectrum-Picker-menuIcon {
   margin-inline-start: var(--spectrum-picker-ui-icon-gap);
 }
 
